--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,6 +1,32 @@
 # ChangeLog for profile directory
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.1096 2008/02/06 00:12:55 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.1103 2008/02/07 03:00:28 wolf31o2 Exp $
+
+  07 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> package.mask:
+  Masking the new pre-release version of catalyst for testing.
+
+  06 Feb 2008; Wulf C. Krueger <philantrop@gentoo.org> package.mask:
+  Updated package.mask for KDE 4.0.1.
+
+  06 Feb 2008; Rémi Cardona <remi@gentoo.org> package.mask:
+  add to p.mask a git snapshot of xf86-video-i810
+
+  06 Feb 2008; nixnut <nixnut@gentoo.org>
+  default-linux/ppc/ppc32/package.use.mask:
+  Masking hb and hb2 USE flags as no suitable solution for evms exists
+
+  06 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> base/package.use,
+  base/packages, default-linux/packages.build:
+  Added arts to package.use for emul-linux-x86-soundlibs, removing
+  debianutils/perl/python from packags/packages.build, since they're pulled in
+  via other packages, anyway, and changing portage and baselayout to virtuals.
+
+  06 Feb 2008; Sébastien Fabbro <bicatali@gentoo.org> use.local.desc:
+  Added hdf5 local flag for sci-physics/meep
+
+  06 Feb 2008; Donnie Berkholz <dberkholz@gentoo.org>; package.mask:
+  (#208688) Remove package. It's been obsoleted upstream, because nobody uses
+  these fonts anymore.
 
   06 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> base/package.use:
   Adding USE=regex to the dev-scheme/guile package.use since it's required for
