--- a/dev-util/opencvs/ChangeLog
+++ b/dev-util/opencvs/ChangeLog
@@ -2,6 +2,13 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*opencvs-1.0_pre20080210230639 (10 Feb 2008)
+
+  10 Feb 2008; Elias Pipping <pipping@gentoo.org>
+  -opencvs-1.0_pre20080205171023.ebuild,
+  +opencvs-1.0_pre20080210230639.ebuild:
+  update to latest snapshot
+
 *opencvs-1.0_pre20080205171023 (05 Feb 2008)
 
   05 Feb 2008; Elias Pipping <pipping@gentoo.org>
