--- a/profiles/default-prefix/ChangeLog
+++ b/profiles/default-prefix/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  13 Feb 2008; Fabian Groffen <grobian@gentoo.org> package.mask:
+  Unmask our Portages again after a global mask for Portage 2.2
+
   06 Feb 2008; Michael Haubenwallner <haubi@gentoo.org> aix/profile.bashrc:
   need direct access to vdb/CONTENTS to cleanly have lib.a unmerged on aix
 
