--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,6 +1,15 @@
 # ChangeLog for profile directory
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.1111 2008/02/11 14:50:59 hoffie Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.1114 2008/02/12 22:26:32 ikelos Exp $
+
+  12 Feb 2008; Mike Auty <ikelos@gentoo.org> use.local.desc:
+  Add a local USE flag for module building in linuxwacom.
+
+  12 Feb 2008; Mike Auty <ikelos@gentoo.org> package.mask:
+  Add linuxwacom mask for testing version.
+
+  12 Feb 2008; Sébastien Fabbro <bicatali@gentoo.org> use.local.desc:
+  Added int64 use flag for blas-goto
 
   11 Feb 2008; Christian Hoffmann <hoffie@gentoo.org> package.mask:
   Masking =dev-lang/php-5.2.5_p20080206 wrt bug #209606 to prevent greater
