--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for profile directory
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.1114 2008/02/12 22:26:32 ikelos Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.1116 2008/02/13 20:12:54 fordfrog Exp $
+
+  13 Feb 2008; Miroslav Šulc <fordfrog@gentoo.org> use.local.desc:
+  Added java6 USE flag for dev-java/jdbc-postgresql
+
+  13 Feb 2008; Sébastien Fabbro <bicatali@gentoo.org> use.local.desc:
+  Added server local use flage to dev-python/dap
 
   12 Feb 2008; Mike Auty <ikelos@gentoo.org> use.local.desc:
   Add a local USE flag for module building in linuxwacom.
@@ -14,6 +20,9 @@
   11 Feb 2008; Christian Hoffmann <hoffie@gentoo.org> package.mask:
   Masking =dev-lang/php-5.2.5_p20080206 wrt bug #209606 to prevent greater
   breakage...
+
+  13 Feb 2008; Miroslav Šulc <fordfrog@gentoo.org> use.local.desc:
+  Added java6 USE flag for dev-java/jdbc-postgresql
 
   09 Feb 2008; Wulf C. Krueger <philantrop@gentoo.org> package.mask:
   Masked nvemftp for removal.
