Mask app-misc/ttyrec-1.0.8 as it doesn't compile on Darwin (Portage version: 2.2.00.9271-prefix/svn/Darwin 9.1.0 i386)
--HG--
extra : convert_revision : svn%3Adcf5e38c-c701-0410-9811-92a63bff3de1/trunk%4017201

--- a/profiles/default-prefix/ChangeLog
+++ b/profiles/default-prefix/ChangeLog
@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  15 Feb 2008; Fabian Groffen <grobian@gentoo.org>
+  darwin/macos/package.mask:
+  Mask app-misc/ttyrec-1.0.8 as it doesn't compile
+
   13 Feb 2008; Fabian Groffen <grobian@gentoo.org> package.mask:
   Unmask our Portages again after a global mask for Portage 2.2
 
