Mask dev-lang/swi-prolog-5.6.50 as it runs out of stack space during compilation
--HG--
extra : convert_revision : svn%3Adcf5e38c-c701-0410-9811-92a63bff3de1/trunk%4017204

--- a/profiles/default-prefix/ChangeLog
+++ b/profiles/default-prefix/ChangeLog
@@ -4,6 +4,11 @@
 
   15 Feb 2008; Fabian Groffen <grobian@gentoo.org>
   darwin/macos/package.mask:
+  Mask dev-lang/swi-prolog-5.6.50 as it runs out of stack space during
+  compilation
+
+  15 Feb 2008; Fabian Groffen <grobian@gentoo.org>
+  darwin/macos/package.mask:
   Mask app-misc/ttyrec-1.0.8 as it doesn't compile
 
   13 Feb 2008; Fabian Groffen <grobian@gentoo.org> package.mask:
