--- a/sys-devel/odcctools/ChangeLog
+++ b/sys-devel/odcctools/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-devel/odcctools
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*odcctools-20080215 (15 Feb 2008)
+
+  15 Feb 2008; Elias Pipping <pipping@gentoo.org>
+  +odcctools-20080215.ebuild:
+  bump to ld64-77.1
 
 *odcctools-20071228 (28 Dec 2007)
 
