--- a/sys-devel/gcc/ChangeLog
+++ b/sys-devel/gcc/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for sys-devel/gcc
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc/ChangeLog,v 1.639 2007/12/29 18:18:51 vapier Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc/ChangeLog,v 1.641 2008/02/16 22:53:29 vapier Exp $
+
+  16 Feb 2008; Mike Frysinger <vapier@gentoo.org> gcc-4.2.3.ebuild:
+  Pull in zip/unzip for USE=gcj #196643.
+
+*gcc-4.2.3 (16 Feb 2008)
+
+  16 Feb 2008; Mike Frysinger <vapier@gentoo.org> +gcc-4.2.3.ebuild:
+  Version bump #209123.
 
   29 Dec 2007; Mike Frysinger <vapier@gentoo.org> gcc-3.3.6-r1.ebuild:
   Grab fixes from newer versions so we can build again #201035 Carlo Marcelo
