--- a/dev-libs/openssl/files/gentoo.config-0.9.8
+++ b/dev-libs/openssl/files/gentoo.config-0.9.8
@@ -112,9 +112,9 @@ BSD)
 solaris)
 	case ${chost_machine} in
 		i386)         machine=x86-${compiler} ;;
-		x86_64*)      machine=x86_64-gcc; system=${system}64;;
-		sparcv9*)     machine=sparcv9;;
-		sparc*)       machine=sparcv8;;
+		x86_64*)      machine=x86_64-${compiler}; system=${system}64;;
+		sparcv9*)     machine=sparcv9-${compiler};;
+		sparc*)       machine=sparcv8-${compiler};;
 	esac
 	;;
 aix)
