--- a/sys-devel/libtool/ChangeLog
+++ b/sys-devel/libtool/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-devel/libtool
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/libtool/ChangeLog,v 1.129 2008/02/16 11:30:38 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/libtool/ChangeLog,v 1.131 2008/02/17 18:25:27 armin76 Exp $
+
+  17 Feb 2008; Raúl Porcel <armin76@gentoo.org> libtool-1.5.26.ebuild:
+  alpha/ia64/sparc stable wrt #210266
+
+  17 Feb 2008; Christoph Mende <angelos@gentoo.org> libtool-1.5.26.ebuild:
+  Stable on amd64, bug #210266
 
   16 Feb 2008; Markus Meier <maekke@gentoo.org> libtool-1.5.26.ebuild:
   x86 stable, bug #210266
