--- a/dev-java/java-config/ChangeLog
+++ b/dev-java/java-config/ChangeLog
@@ -1,6 +1,20 @@
 # ChangeLog for dev-java/java-config
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/java-config/ChangeLog,v 1.179 2008/01/27 15:31:49 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/java-config/ChangeLog,v 1.183 2008/02/15 18:43:49 wltjr Exp $
+
+  15 Feb 2008; William L. Thomson Jr. <wltjr@gentoo.org>
+  java-config-2.1.4.ebuild:
+  amd64 stable, bug #207590.
+
+  05 Feb 2008; Markus Rothe <corsair@gentoo.org> java-config-2.1.4.ebuild:
+  Stable on ppc64
+
+  31 Jan 2008; Christian Faulhammer <opfer@gentoo.org>
+  java-config-2.1.4.ebuild:
+  stable x86, bug 207590
+
+  29 Jan 2008; nixnut <nixnut@gentoo.org> java-config-2.1.4.ebuild:
+  Stable on ppc wrt bug 207590
 
   27 Jan 2008; Brent Baude <ranger@gentoo.org> java-config-2.1.3.ebuild:
   Marking java-config-2.1.3 ppc64 for bug 207590
