app-text/openrcs: update to latest snapshot (Portage version: 2.2.00.9271-prefix/svn/Darwin 9.2.0 i386)
--HG--
extra : convert_revision : svn%3Adcf5e38c-c701-0410-9811-92a63bff3de1/trunk%4018439

--- a/app-text/openrcs/ChangeLog
+++ b/app-text/openrcs/ChangeLog
@@ -2,6 +2,13 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*openrcs-4.1_pre20080211195755 (22 Feb 2008)
+
+  22 Feb 2008; Elias Pipping <pipping@gentoo.org>
+  -openrcs-4.1_pre20080210230707.ebuild,
+  +openrcs-4.1_pre20080211195755.ebuild:
+  update to latest snapshot
+
 *openrcs-4.1_pre20080210230707 (10 Feb 2008)
 
   10 Feb 2008; Elias Pipping <pipping@gentoo.org>
