New snapshot, replacing the older masked one, this one still has the same problem, which I think is bug #209538 (Portage version: 2.2.00.9375-prefix/svn/Darwin 8.11.0 powerpc)
--HG--
extra : convert_revision : svn%3Adcf5e38c-c701-0410-9811-92a63bff3de1/trunk%4018443

--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,13 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*portage-2.2.00.9375 (24 Feb 2008)
+
+  24 Feb 2008; Fabian Groffen <grobian@gentoo.org>
+  -portage-2.2.00.9300.ebuild, +portage-2.2.00.9375.ebuild:
+  New snapshot, replacing the older masked one, this one still has the same
+  problem, which I think is bug #209538
+
 *portage-2.2.00.9300 (08 Feb 2008)
 
   08 Feb 2008; Fabian Groffen <grobian@gentoo.org>
