New snapshot which fixes the masked packages output of the previous two masked releases. (Portage version: 2.2.00.9380-prefix/svn/Darwin 8.11.0 powerpc)
--HG--
rename : sys-apps/portage/portage-2.2.00.9376.ebuild => sys-apps/portage/portage-2.2.00.9380.ebuild
extra : convert_revision : svn%3Adcf5e38c-c701-0410-9811-92a63bff3de1/trunk%4018446

--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,13 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*portage-2.2.00.9380 (24 Feb 2008)
+
+  24 Feb 2008; Fabian Groffen <grobian@gentoo.org>
+  -portage-2.2.00.9376.ebuild, +portage-2.2.00.9380.ebuild:
+  New snapshot which fixes the masked packages output of the previous two
+  masked releases.
+
 *portage-2.2.00.9376 (24 Feb 2008)
 
   24 Feb 2008; Fabian Groffen <grobian@gentoo.org>
