--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for profile directory
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.1153 2008/02/24 16:37:53 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.1155 2008/02/25 14:47:47 armin76 Exp $
+
+  25 Feb 2008; Raúl Porcel <armin76@gentoo.org> use.local.desc:
+  Add switch_user USE-flag for net-p2p/dbhub
+
+  24 Feb 2008; Peter Volkov <pva@gentoo.org> use.local.desc:
+  Add festival, espeak and gucharmap USE flags for app-dicts/stardict.
 
   24 Feb 2008; Alexis Ballier <aballier@gentoo.org> package.mask:
   mask ocaml release candidate
