--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for profile directory
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.1155 2008/02/25 14:47:47 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.1157 2008/02/27 02:37:36 dirtyepic Exp $
+
+  27 Feb 2008; Ryan Hill <dirtyepic@gentoo.org> ChangeLog:
+  Remove avahi from mips use.mask.  This was masked waiting for avahi to go
+  stable on mips, which now won't be happening.  If you need to drop your
+  package to ~mips to prevent repoman from complaining, feel free.
+
+  26 Feb 2008; Alistair Bush <ali_bush@gentoo.org> use.local.desc:
+  Adding dev-java/jython:servletapi description.
 
   25 Feb 2008; Raúl Porcel <armin76@gentoo.org> use.local.desc:
   Add switch_user USE-flag for net-p2p/dbhub
