--- a/x11-libs/qt/ChangeLog
+++ b/x11-libs/qt/ChangeLog
@@ -1,6 +1,15 @@
 # ChangeLog for x11-libs/qt
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt/ChangeLog,v 1.513 2008/02/23 15:42:39 ingmar Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt/ChangeLog,v 1.515 2008/02/25 14:27:08 caleb Exp $
+
+  25 Feb 2008; Caleb Tennis <caleb@gentoo.org>
+  -files/qt-4.3.1-powerpc64.patch, -qt-4.3.1-r1.ebuild, -qt-4.3.2.ebuild:
+  remove older versions
+
+*qt-4.3.4 (25 Feb 2008)
+
+  25 Feb 2008; Caleb Tennis <caleb@gentoo.org> +qt-4.3.4.ebuild:
+  4.3.4 version bump
 
   23 Feb 2008; Ingmar Vanhassel <ingmar@gentoo.org> qt-3.3.4-r8.ebuild,
   qt-3.3.8-r4.ebuild:
