--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*portage-2.2.00.9405 (01 Mar 2008)
+
+  01 Mar 2008; Fabian Groffen <grobian@gentoo.org>
+  -portage-2.2.00.9233.ebuild, +portage-2.2.00.9405.ebuild:
+  New snapshot, with window titles support for interix.
+
 *portage-2.2.00.9380 (24 Feb 2008)
 
   24 Feb 2008; Fabian Groffen <grobian@gentoo.org>
