Add new revision (masked) that puts the libs by itself in usr/lib, which we move out of the way and gcc-config should move back again. (Portage version: 2.2.00.9405-prefix/svn/Darwin 8.11.0 powerpc)
--HG--
extra : convert_revision : svn%3Adcf5e38c-c701-0410-9811-92a63bff3de1/trunk%4018696

--- a/sys-devel/gcc-apple/ChangeLog
+++ b/sys-devel/gcc-apple/ChangeLog
@@ -2,6 +2,13 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*gcc-apple-4.0.1_p5465-r2 (02 Mar 2008)
+
+  02 Mar 2008; Fabian Groffen <grobian@gentoo.org>
+  +gcc-apple-4.0.1_p5465-r2.ebuild:
+  Add new revision (masked) that puts the libs by itself in usr/lib, which we
+  move out of the way and gcc-config should move back again.
+
   20 Jan 2008; Elias Pipping <pipping@gentoo.org>
   files/gcc-apple-4.2.1-texinfo.patch, gcc-apple-4.2.1_p5531.ebuild,
   gcc-apple-4.2.1_p5531.ebuild:
