--- a/profiles/base/ChangeLog
+++ b/profiles/base/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for Gentoo base-profile
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/base/ChangeLog,v 1.31 2008/02/14 15:44:18 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/base/ChangeLog,v 1.33 2008/03/02 23:58:25 opfer Exp $
+
+  03 Mar 2008; Christian Faulhammer <opfer@gentoo.org> package.use.mask:
+  remove useless entry for conky
+
+  02 Mar 2008; Christian Faulhammer <opfer@gentoo.org> package.use.mask:
+  USE=libpaludis is very experimental
 
   14 Feb 2008; Raúl Porcel <armin76@gentoo.org> virtuals:
   Remove useless virtual/bittorrent
