sync, --force because IUSE.invalid is fatal now (didn't betelgeuse ask for that check? grrr) (Portage version: 2.2.00.9405-prefix/svn/SunOS 5.10 i386, RepoMan options: --force)
--HG--
extra : convert_revision : svn%3Adcf5e38c-c701-0410-9811-92a63bff3de1/trunk%4018776

--- a/dev-java/ant-tasks/ChangeLog
+++ b/dev-java/ant-tasks/ChangeLog
@@ -1,6 +1,15 @@
 # ChangeLog for dev-java/ant-tasks
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/ant-tasks/ChangeLog,v 1.78 2008/01/22 02:14:27 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/ant-tasks/ChangeLog,v 1.80 2008/03/03 08:16:45 caster Exp $
+
+  03 Mar 2008; Vlastimil Babka <caster@gentoo.org>
+  -ant-tasks-1.6.5-r4.ebuild:
+  Remove ant 1.6.5. Java packages already depend on 1.7.0.
+
+  03 Mar 2008; William L. Thomson Jr. <wltjr@gentoo.org>
+  -ant-tasks-1.7.0-r2.ebuild, -ant-tasks-1.7.0-r3.ebuild,
+  ant-tasks-1.7.0-r4.ebuild:
+  amd64 stable, bug #177362.Removed past versions in same slot.
 
   22 Jan 2008; Brent Baude <ranger@gentoo.org> ant-tasks-1.7.0-r4.ebuild:
   Marking ant-tasks-1.7.0-r4 ppc64 for bug 177362
