--- a/profiles/default-prefix/ChangeLog
+++ b/profiles/default-prefix/ChangeLog
@@ -3,7 +3,8 @@
 # $Header: $
 
   04 Mar 2008; Fabian Groffen <grobian@gentoo.org> package.mask:
-  Mask dev-util/cmake-2.4.8 as it segfaults during compilation
+  Mask dev-util/cmake-2.4.8 and dev-lang/swi-prolog-5.6.51 as it
+  segfaults during compilation
 
   24 Feb 2008; Fabian Groffen <grobian@gentoo.org> package.mask:
   Remove mask for Portage, the offending releases are no longer in the tree.
