--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,13 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*portage-2.2.00.9450 (07 Mar 2008)
+
+  07 Mar 2008; Fabian Groffen <grobian@gentoo.org>
+  -portage-2.2.00.9271.ebuild, +portage-2.2.00.9450.ebuild:
+  New snapshot, hopefully finally releasing us from many duplicate post emerge
+  messages
+
 *portage-2.2.00.9405 (01 Mar 2008)
 
   01 Mar 2008; Fabian Groffen <grobian@gentoo.org>
