--- a/profiles/base/ChangeLog
+++ b/profiles/base/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for Gentoo base-profile
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/base/ChangeLog,v 1.33 2008/03/02 23:58:25 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/base/ChangeLog,v 1.34 2008/03/11 18:24:31 opfer Exp $
+
+  11 Mar 2008; Christian Faulhammer <opfer@gentoo.org> package.use.mask:
+  extend libpaludis mask for app-portage/gatt
 
   03 Mar 2008; Christian Faulhammer <opfer@gentoo.org> package.use.mask:
   remove useless entry for conky
