--- a/dev-java/aspectwerkz/ChangeLog
+++ b/dev-java/aspectwerkz/ChangeLog
@@ -1,6 +1,19 @@
 # ChangeLog for dev-java/aspectwerkz
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/aspectwerkz/ChangeLog,v 1.19 2008/01/10 22:04:52 caster Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/aspectwerkz/ChangeLog,v 1.22 2008/03/11 15:21:45 betelgeuse Exp $
+
+  11 Mar 2008; Petteri Räty <betelgeuse@gentoo.org>
+  aspectwerkz-2.0_rc2-r2.ebuild:
+  RESTRICT test because they fail.
+
+  09 Feb 2008; William L. Thomson Jr. <wltjr@gentoo.org>
+  -files/aspectwerkz-2.0-gentoo.patch, -aspectwerkz-2.0_rc2.ebuild,
+  -aspectwerkz-2.0.ebuild:
+  Removed older versions in same slot
+
+  09 Feb 2008; William L. Thomson Jr. <wltjr@gentoo.org>
+  aspectwerkz-2.0_rc2-r2.ebuild:
+  amd64 stable, bug #203270.
 
   10 Jan 2008; Vlastimil Babka <caster@gentoo.org>
   aspectwerkz-2.0_rc2-r2.ebuild:
