--- a/dev-util/plan9port/ChangeLog
+++ b/dev-util/plan9port/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for dev-util/plan9port
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/plan9port/ChangeLog,v 1.1 2007/05/29 02:11:27 anant Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-util/plan9port/ChangeLog,v 1.2 2008/03/11 13:03:53 coldwind Exp $
+
+*plan9port-20080130 (11 Mar 2008)
+
+  11 Mar 2008; Santiago M. Mola <coldwind@gentoo.org>
+  plan9port-20070522.ebuild, +plan9port-20080130.ebuild:
+  Version bump, added patch to fix shebangs (bug #201404), marked ~amd64 (bug
+  #209553), use elog.
 
 *plan9port-20070522 (29 May 2007)
 
