--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,6 +1,15 @@
 # ChangeLog for profile directory
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.1208 2008/03/13 01:12:17 dirtyepic Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.1211 2008/03/13 17:35:34 armin76 Exp $
+
+  13 Mar 2008; Raúl Porcel <armin76@gentoo.org> updates/1Q-2008:
+  slotmove xulrunner-1.8* to slot 1.8
+
+  13 Mar 2008; Wolfram Schlich <wschlich@gentoo.org> package.mask:
+  update of mondo-rescue/mindi packages wrt bug #106497
+
+  13 Mar 2008; Bernard Cafarelli <voyageur@gentoo.org> package.mask:
+  Fix net-im/openfire-3.5.0_rc* mask
 
   13 Mar 2008; Ryan Hill <dirtyepic@gentoo.org> package.mask:
   Remove fontforge from package.mask.  Bug #212715.
