New snapshot, defaulting to parallel fetch (Portage version: 2.2.00.9468-prefix/svn/Darwin 8.11.0 powerpc)
--HG--
extra : convert_revision : svn%3Adcf5e38c-c701-0410-9811-92a63bff3de1/trunk%4019290

--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*portage-2.2.00.9468 (15 Mar 2008)
+
+  15 Mar 2008; Fabian Groffen <grobian@gentoo.org>
+  -portage-2.2.00.9380.ebuild, +portage-2.2.00.9468.ebuild:
+  New snapshot, defaulting to parallel fetch
+
 *portage-2.2.00.9450 (07 Mar 2008)
 
   07 Mar 2008; Fabian Groffen <grobian@gentoo.org>
