--- a/profiles/default-prefix/ChangeLog
+++ b/profiles/default-prefix/ChangeLog
@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  16 Mar 2008; Fabian Groffen <grobian@gentoo.org> +bsd/openbsd/4.2/x64,
+  bsd/openbsd/4.2/x64/make.defaults:
+  Add x64-openbsd profile
+
   04 Mar 2008; Fabian Groffen <grobian@gentoo.org> package.mask:
   Mask dev-util/cmake-2.4.8 and dev-lang/swi-prolog-5.6.51 as it
   segfaults during compilation
