--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.1215 2008/03/15 19:35:35 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.1217 2008/03/17 00:39:17 dirtyepic Exp $
+
+  17 Mar 2008; Ryan Hill <dirtyepic@gentoo.org> package.mask:
+  Mask dev-util/jam for removal.
+
+  15 Mar 2008; Peter Volkov <pva@gentoo.org> use.local.desc:
+  Added gcrypt, pcap and another time smi USE flags for wireshark. Fixed typos
+  for scanlogd.
 
   15 Mar 2008; Tobias Scherbaum <dertobi123@gentoo.org> use.local.desc:
   Add targrey for mail-filter/postgrey
