--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,6 +1,15 @@
 # ChangeLog for profile directory
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.1223 2008/03/19 01:05:24 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.1226 2008/03/20 03:03:40 dirtyepic Exp $
+
+  20 Mar 2008; Ryan Hill <dirtyepic@gentoo.org> package.mask:
+  Mask new freetype-1 ebuild for testing.
+
+  19 Mar 2008; Cédric Krier <cedk@gentoo.org> package.mask:
+  Unmasking net-firewall/conntrack-tools-0.9.6
+
+  19 Mar 2008; Jeroen Roovers <jer@gentoo.org> package.mask:
+  Update sysstat mask for newer development version(s).
 
   19 Mar 2008; Jeroen Roovers <jer@gentoo.org> package.mask:
   Mask development version net-firewall/conntrack-tools-0.9.6.
