--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,6 +1,16 @@
 # ChangeLog for profile directory
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.1226 2008/03/20 03:03:40 dirtyepic Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.1229 2008/03/20 19:59:05 tove Exp $
+
+  20 Mar 2008; Torsten Veller <tove@gentoo.org> package.mask:
+  Mask mail-client/ciphire-mail for removal.
+
+  20 Mar 2008; Markus Ullmann <jokey@gentoo.org> use.local.desc:
+  Add local flags for mail-filter/MailScanner
+
+  20 Mar 2008; Petteri Räty <betelgeuse@gentoo.org>
+  hardened/amd64/package.use.mask, selinux/amd64/package.use.mask:
+  package.use.mask libffi on amd64 as libffi is always required. See bug #213882.
 
   20 Mar 2008; Ryan Hill <dirtyepic@gentoo.org> package.mask:
   Mask new freetype-1 ebuild for testing.
