--- a/profiles/base/ChangeLog
+++ b/profiles/base/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for Gentoo base-profile
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/base/ChangeLog,v 1.34 2008/03/11 18:24:31 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/base/ChangeLog,v 1.36 2008/03/21 19:34:15 jokey Exp $
+
+  21 Mar 2008; Markus Ullmann <jokey@gentoo.org> package.use.mask:
+  use mask qt4 on net-irc/kvirc-3.4.0
+
+  21 Mar 2008; Christian Faulhammer <opfer@gentoo.org> virtuals:
+  there is a new-style virtual now for pager
 
   11 Mar 2008; Christian Faulhammer <opfer@gentoo.org> package.use.mask:
   extend libpaludis mask for app-portage/gatt
