--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,6 +1,27 @@
 # ChangeLog for profile directory
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.1230 2008/03/21 06:53:42 remi Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.1237 2008/03/23 02:21:09 ulm Exp $
+
+  23 Mar 2008; Ulrich Mueller <ulm@gentoo.org> use.local.desc:
+  Add local jde USE flag for app-emacs/emhacks.
+
+  22 Mar 2008; Gilles Dartiguelongue <eva@gentoo.org> use.local.desc:
+  add USE flag description for app-arch/file-roller
+
+  22 Mar 2008; Gilles Dartiguelongue <eva@gentoo.org> package.mask:
+  add gnome-base/gdm-2.20.4 to the gnome-2.22 mask
+
+  22 Mar 2008; Gilles Dartiguelongue <eva@gentoo.org> use.local.desc:
+  add asyncns USE flag for net-libs/loudmouth
+
+  22 Mar 2008; Denis Dupeyron <calchan@gentoo.org> package.mask:
+  Masked sci-libs/libgdgeda for removal.
+
+  22 Mar 2008; Torsten Veller <tove@gentoo.org> package.mask:
+  Removed =mail-mta/msmtp-1.4.9-r1
+
+  22 Mar 2008; Hans de Graaff <graaff@gentoo.org> use.local.desc:
+  Add netbpm USE flag for app-office/texmacs.
 
   21 Mar 2008; Rémi Cardona <remi@gentoo.org> package.mask:
   adding xf86-video-i810-2.2.99* to p.mask for testing
